Fixed a wrong alignment of the table in the Pronostics view.

--- a/pronos/static/pronos/style.css
+++ b/pronos/static/pronos/style.css
@@ -191,12 +191,20 @@ form label
 
 div.scrolling
 {
-    height: 460px;
+    height: 420px;
     max-width: 100%;
     overflow: auto;
     margin-left: auto; 
     margin-right: auto;
     margin-bottom: 5px;
+}
+
+div.h_scrolling
+{
+    max-width: 100%;
+    overflow: auto;
+    margin-left: auto; 
+    margin-right: auto;
 }
 
 table
